alignment fixes

--- a/assets/styles/account.css
+++ b/assets/styles/account.css
@@ -6,6 +6,7 @@ body {
 
 #survey {
     text-align: center;
+    margin-top: 90px;
 }
 
 #survey div {
